<resources>
    <string name="app_name">Return A Cup</string>

    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="company_name">Company Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="counter_page_header">With Return-A-Cup\n\n
        Scan your Cup and Place it in the\n
        Cup recycling bin</string>
    <string name="start_scan">Start Scan</string>
    <string name="return_a_cup_counter">Return-A-Cup\'s Counter</string>
    <string name="people_recycling">People Recycling</string>
    <string name="print">Print</string>
    <string name="send_to_email">Send to email</string>
    <string name="paper_unavailable">Paper is unavailable</string>
    <string name="printer_unavailable">Printer is not connected</string>
    <string name="PRINT_STRING">TOKEN\ncollect 10\n\n\n   </string>
    <string name="sharing_page_header">Scan Successful\n\nHow Would you Like Your Token</string>
    <string name="thankyou_page_header">Thank you for returning your cup!\n
        Please use your tokens at the store counter</string>
    <string name="thankyou_page_footer">All cups in the Return-A-Cup programme\n
        are sent to the approved cup recycling facilities.</string>
    <string name="logout">Logout</string>

    <string name="PlaceYourSymbol">Place your symbol within red rectangle.</string>
    <string name="Scanning">Scanning…</string>
    <string name="Submit">Submit</string>
    <string name="Grant_necessary_permissions">Please go to app settings and grant necessary settings.</string>
    <string name="Permissions_not_granted">Permission are not granted.</string>
    <string name="NewScan">New Scan</string>
</resources>
