<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="40dp">

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/dr_bg_round_border_white"
        android:gravity="center"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etCompanyName"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dr_bg_round_border_white"
        android:gravity="center"
        android:hint="@string/company_name"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dr_bg_round_border_white"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGray"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/dr_selector_bg_green"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>