<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/counter_page_header"
            android:textColor="@color/lightGray"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStartScan"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/dr_selector_bg_green"
        android:text="@string/start_scan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/return_a_cup_counter"
            android:textColor="@color/lightGray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_group" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/people_recycling"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCounterNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/people_recycling"
            android:textColor="@color/lightGray"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>