<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dr_selector_border_white"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/dr_selector_border_white"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>