<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/dr_bg_round_border_white"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textColorHint="@color/lightGray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/dr_selector_bg_green"
            android:text="@string/print"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnSendToEmail"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/dr_selector_bg_blue"
            android:text="@string/send_to_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>